@startuml
interface Sorter {
    +load()
    +sort()
    +getPlan()
}
class Matrix{
    -Position[] positions
    --
    +put()
    +get()
    +toString()
    +toArray()
}
class Position{
    -Linable linable
    +setLinable()
}
interface Linable{
    +setPosition()
    +getPosition()
    +getValue()
}
class Sub implements Linable{
    -final int num
    -final int r
    -final int g
    -final int b
    -Position position
    --
    +{static} getGourdByRank()
    +rank()
    +toString()
    +setPosition()
    +getPosition()
    +swapPosition()
    +getValue()
}
class Geezer{
    {static} -Geezer theGeezer
    {static} +getTheGeezer()
    -Geezer()
    -Sorter sorter
    +setSorter()
    +lineUp()
    -parsePlan()
    -execute()
}
class BubbleSorter implements Sorter{
    -int[] a
    +load()
    +swap()
    -String plan
    +sort()
    +getPlan()
}
class QuickSort implements Sorter{
    -int[] a
    +load()
    +swap()
    -String plan
    +sort()
    -qsort()
    +getPlan()
}
Matrix +-- Position
Gourd o-- Position
Geezer o-- Sorter
Geezer o-- Geezer
@enduml